--- a/main.html
+++ b/main.html
@@ -68,14 +68,13 @@
     let flowerPlaced = false;
     var zDistance = 0;
     var rotationVector = new THREE.Vector3(0, 0, 0);
-    var cameraTexture = null;
 
     async function activateXR() {
       const canvas = document.createElement('canvas');
       document.body.appendChild(canvas);
       const gl = canvas.getContext('webgl2', {xrCompatible: true});
 
-      session = await navigator.xr.requestSession('immersive-ar', {requiredFeatures: ['hit-test', 'dom-overlay', 'camera-access'], domOverlay: { root: document.body }});
+      session = await navigator.xr.requestSession('immersive-ar', {requiredFeatures: ['hit-test', 'dom-overlay'], domOverlay: { root: document.body }});
       session.updateRenderState({baseLayer: new XRWebGLLayer(session, gl)});
 
       binding = new XRWebGLBinding(session, gl);
@@ -120,10 +119,6 @@
           camera.matrix.fromArray(view.transform.matrix);
           camera.projectionMatrix.fromArray(view.projectionMatrix);
           camera.updateMatrixWorld(true);
-
-          if (view.camera) {
-            cameraTexture = binding.getCameraImage(view.camera);
-          }
 
           const hitTestResults = frame.getHitTestResults(hitTestSource);
           if (hitTestResults.length > 0 && reticle) {
@@ -211,58 +206,6 @@
       document.getElementById('info').innerText = 
         `Distance Z: ${zDistance.toFixed(2)}\n` +
         `Camera to Gravity Angle: (${rotationVectorDegrees.x.toFixed(2)}°, ${rotationVectorDegrees.y.toFixed(2)}°, ${rotationVectorDegrees.z.toFixed(2)}°)`;
-
-      if (cameraTexture) {
-        const canvas = document.createElement('canvas');
-        const context = canvas.getContext('2d');
-
-        // Use the dimensions of the texture if available
-        canvas.width = 640;
-        canvas.height = 480;
-
-        try {
-          const gl = renderer.getContext();
-          const framebuffer = gl.createFramebuffer();
-          gl.bindFramebuffer(gl.FRAMEBUFFER, framebuffer);
-
-          const texture = gl.createTexture();
-          gl.bindTexture(gl.TEXTURE_2D, texture);
-          gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, canvas.width, canvas.height, 0, gl.RGBA, gl.UNSIGNED_BYTE, null);
-
-          // Copy camera image to the texture
-          const binding = new XRWebGLBinding(session, gl);
-          binding.copyExternalImageToTexture({ source: cameraTexture }, { texture });
-
-          gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, texture, 0);
-
-          const pixels = new Uint8Array(canvas.width * canvas.height * 4);
-          gl.readPixels(0, 0, canvas.width, canvas.height, gl.RGBA, gl.UNSIGNED_BYTE, pixels);
-
-          const imageData = new ImageData(new Uint8ClampedArray(pixels), canvas.width, canvas.height);
-          context.putImageData(imageData, 0, 0);
-
-          canvas.toBlob((blob) => {
-            if (blob) {
-              const link = document.createElement('a');
-              link.href = URL.createObjectURL(blob);
-              link.download = 'camera_image.png';
-              document.body.appendChild(link);
-              link.click();
-              document.body.removeChild(link);
-            }
-          }, 'image/png');
-        } catch (error) {
-          console.error("Error capturing camera image:", error);
-          document.getElementById('info').innerText += '\nError capturing camera image.';
-        } finally {
-          gl.bindFramebuffer(gl.FRAMEBUFFER, null);
-          gl.deleteFramebuffer(framebuffer);
-          gl.deleteTexture(texture);
-        }
-      } else {
-        console.log("cameraTexture is null or undefined");
-        document.getElementById('info').innerText += '\nCamera image not available.';
-      }
     }
 
     document.getElementById('startARBtn').addEventListener('click', startAR);
