--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
     }
     .info {
       position: absolute;
-      top: 10px;
+      top: 20px;
       left: 150px;
       z-index: 10;
       background: rgba(0, 0, 0, 0.5);
@@ -72,7 +72,7 @@
   <button id="saveImageBtn">Save Image</button>
   <div class="overlay" style="display: none;">
     <button class="button" id="placeFlowerBtn">Place/Move Flower</button>
-    <button class="button" id="showInfoBtn">Show Info</button>
+   // <button class="button" id="showInfoBtn">Show Info</button>
   </div>
   <div class="info" id="info">Information will be displayed here.</div>
 
